# konstrukt

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build_and_run.sh  clean.sh  conanfile.py  config.json  coverage.sh  default.profraw
.ci/: setup-conan.sh
.github/workflows/: build-and-test.yml  ci.yml  coverage.yml
konstrukt/: CMakeLists.txt  main.cc
source/: CMakeLists.txt
source/app/: CMakeLists.txt  Layer.hpp  LayerStack.cc  LayerStack.hpp
source/core/: CMakeLists.txt  CoreTypes.hpp  FilesystemHandler.hpp  GraphicsType.hpp  Logger.cc  Logger.hpp  Result.hpp
source/core/application/: Application.cc  Application.hpp  ApplicationWindow.cc  ApplicationWindow.hpp  Layer.cc  Layer.hpp  LayerStack.cc  LayerStack.hpp  VulkanTestLayer.cc  VulkanTestLayer.hpp
source/core/config/: Config.cc  Config.hpp
source/core/log/: Logger.cpp  Logger.hpp
source/core/memory/: Allocator.hpp
source/core/utils/: FileUtils.hpp
source/renderer/: CMakeLists.txt  Renderer.cc  Renderer.hpp
source/renderer/RHI/: CMakeLists.txt  GraphicsContext.cc  GraphicsContext.hpp
source/renderer/RHI/VulkanBackend/: CMakeLists.txt  VulkanContext.cc  VulkanContext.hpp
source/renderer/RHI/VulkanBackend/VulkanCore/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Context.cpp  Context.hpp  ShaderModule.cpp  Texture.hpp  Utility.hpp
source/renderer/commands/: RenderCommand.hpp  RenderCommandBuffer.cc  RenderCommandBuffer.hpp
source/renderer/core/: CommandRecorder.hpp  GraphicsContext.hpp  GraphicsDevice.hpp  GraphicsHandles.hpp  GraphicsType.hpp
source/renderer/core/vulkan/: VulkanCommandRecorder.cc  VulkanCommandRecorder.hpp  VulkanContext.cc  VulkanContext.hpp  VulkanDevice.cc  VulkanDevice.hpp
source/renderer/framegraph/: Framegraph.cc  Framegraph.hpp  FramegraphBuilder.cc  FramegraphBuilder.hpp  RenderPass.cc  RenderPass.hpp
source/renderer/resources/: GLTFLoader.cc  GLTFLoader.hpp  ModelLoader.cc  ModelLoader.hpp  ModelTypes.hpp  RenderResource.cc  RenderResource.hpp  ResourceID.hpp  ResourceLoader.cc  ResourceLoader.hpp  ResourceManager.cc  ResourceManager.hpp  ResourceRegistry.cc  ResourceRegistry.hpp
tests/: CMakeLists.txt
tests/core/: CoreTypesTest.cpp  GraphicsTypeTest.cpp
tests/core/config/: ConfigTest.cpp
tests/core/log/: LoggerTest.cpp
tests/core/memory/: AllocatorTest.cpp
tests/renderer/core/: GraphicsHandlesTest.cpp  GraphicsTypeTest.cpp
tests/renderer/resources/: ResourceIDTest.cpp
